html and css added

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport", content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <title>Flower with Turtle</title>
 </head>
 
 <body>
-    <h1>Hello</h1>
+    
+    <div id="logo">
+        <h1>logo</h1>
+    </div>
+    <nav id="topMenu">
+        <ul>
+            <li>Home</li>
+            <li>Services</li>
+            <li>Contact</li>
+        </ul>
+    </nav>
+
+    <div id="clearfix"></div>
+
+    <nav id="content1">
+        <ul>
+            <li>Image 1</li>
+            <li>Image 2</li>
+            <li>Image 3</li>
+        </ul>
+    </nav>
+
+    <nav id="content2">
+        <ul>
+            <li>Facebook</li>
+            <li>X</li>
+            <li>Instagram</li>
+        </ul>
+    </nav>
+    
+
 </body>
 </html>
